Faixa de promoção de Setembro e efeito no botão enviar

--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
             <h3 class="listarodape">
                 Categorias
             </h3>
+            <br>
             <ul class="listarodape">
                 <li>
                     Sandalias
@@ -119,12 +120,13 @@
             <h3 class="listarodape">
                 Institucional
             </h3>
+            <br>
             <ul class="listarodape">
                 <li>sobre nós</li>
                 <li>perguntas frequentes</li>
                 <li>politica de privacidade</li>
                 <li>rastreamento de pedidos</li>
-                <li>trabalhe conosco</li>
+                <li><a href="trabalhe-conosco.html">trabalhe conosco</a></li>
                 <li>contato</li>
             </ul>
         </section>
