--- a/trabalhe-conosco.html
+++ b/trabalhe-conosco.html
@@ -22,6 +22,9 @@
             </p>
         </nav>
     </header>
+    <div class="faixa">
+        <h2 class="faixa-mensagem">Mês de Setembro - frete grátis para todo o brasil!</h2>
+    </div>
     <main class="principal">
         <section>
             <h1 class="titulo">
